--- a/index.html
+++ b/index.html
@@ -22,7 +22,76 @@
 </head>
 
 <body>
- 
+<h1 class ="header">
+<span class="red">Red</span> pill or <span class="blue">Blue</span> pill?
+ </h1>
+
+
+ <input placeholder ="Which do you choose?" id="myInput">
+
+<button id= "myButton" onclick="myFunction()">
+Choose</button>
+
+
+
+<div id="newDiv">
+<h4 id="result">
+</h4>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
